--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
+    <title>Tienda en línea</title>
     <meta charset="UTF-8">
-    <title>Mi Tienda</title>
 </head>
 <body>
-    <h1>¡Bienvenido a mi tienda!</h1>
-    <p>¡Bienvenido a mi tienda!</p>
-    <ul>
-        <li>Producto 1</li>
-        <li>Producto 2</li>
-        <li>Producto 3</li>
-    </ul>
+
+    <div>
+        <h1 style="text-align: center;">Home</h1>
+        <p>Bienvenidos a la página de la Tienda en línea...</p>
+    </div>
+
+    <p style="text-align: left;">Lorem ipsum dolor sit amet consectetur adipiscing elit...</p>
+    <p style="text-align: right;">Morbi accumsan eget augue nec malesuada...</p>
+    <p style="text-align: center;">Ultricies ornare pretium libero bibendum at tortor...</p>
+
+    <br><br>
+
+    <p>Última línea</p>
+
 </body>
 </html>
